--- a/css/show-background.css
+++ b/css/show-background.css
@@ -1,7 +1,7 @@
 .show-background {
     position: absolute;
-    bottom: 1.5rem;
-    left: 1.5rem;
+    bottom: 1rem;
+    left: 1rem;
     font-size: 1.5rem;
     color: var(--clr-text-inverted);
     opacity: 0.5;
@@ -11,6 +11,10 @@
 
 .show-background:hover {
     opacity: 1;
+}
+
+.show-background > input {
+    display: none;
 }
 
 .become-transparent {
