--- a/css/todo/todo.css
+++ b/css/todo/todo.css
@@ -6,4 +6,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: var(--clr-backgorund);
+    backdrop-filter: var(--blur);
+    box-shadow: var(--shadow-deep);
+    border-radius: 0.6rem;
 }
